# quotapy

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/actions/install-poetry/: action.yml
.github/workflows/: github-actions-cicd.yml
src/quotapy/: client.py  event.py  helloworld.py  quotas_table.py  usecase.py
src/tests/: quota_test.py
