[metadata]
name = quotapy
version = 1.0
author = Victor Goubet & Thomas Graff
author_email = victorgoubet@orange.fr
description = Quotas package
long_description = file: README.md
long_description_content_type = text/markdown
home_page = https://github.com/VictorGoubet/quotapy
project_urls =
    Bug Tracker = https://github.com/VictorGoubet/quotapy/issues
    Source Code = https://github.com/VictorGoubet/quotapy
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
requires_dist = setuptools

[options]
package_dir=
    =src
packages=find:
[options.packages.find]
where=src